Update requirements.txt to modify dependencies
Removed sqlite3, werkzeug.security, functools, and smtplib. Updated flask_wtf to flask-wtf.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
 flask
-sqlite3
 jinja2
 flask-mail
-flask_wtf
+flask-wtf
 flask-session
 requests
-werkzeug.security
 itsdangerous
-functools
-smtplib
