--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-flask
-jinja2
-flask-mail
-flask-wtf
-flask-session
-requests
-itsdangerous
+Flask==2.3.4
+Jinja2==3.1.2
+Flask-Mail==0.9.1
+Flask-WTF==1.1.1
+Flask-Session==0.5.0
+requests==2.31.0
+itsdangerous==2.1.2
+redis==5.2.0
+email-validator==1.3.1
