--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.html linguist-vendored
-*.css linguist-vendored
+*.css linguist-detectable=false
 
 static/* linguist-vendored
 templates/* linguist-vendored
